# humanoid-motion-planning

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: perception_config.yaml  planner_params.yaml  robot_config.yaml
docs/: api_reference.md  architecture.md  installation.md  quickstart.md
examples/: complete_demo.py
robots/: README.md
scripts/: run_reaching_task.py  visualize_trajectory.py
src/humanoid_planner/: __init__.py  kinematics.py  motion_planner.py  perception.py  stability_analysis.py  support_polygon.py  trajectory_optimizer.py  zmp_constraint.py
tests/: test_integration.py  test_motion_planner.py  test_perception.py  test_stability_analysis.py
